@@ -4,6 +4,7 @@ Version History
 x.x:
 
 - fixed: group thumbnails not loading in Elgg 1.10 #78
+- fixed: wrong checks on group default access (thanks to https://community.elgg.org/profile/Josh.Henly)
 
 3.1 (2014-02-18):
 
